--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -68,7 +68,7 @@ header ul:after {
 
 footer {
   width: 100%;
-  background-color:#2c3e50;
+  background-color:gray;
   padding: 20px 0 10px 0;
   color: white;
   margin: auto;
@@ -86,3 +86,8 @@ html {
 body {
   text-align: center;
 }
+
+.center {
+  text-align: center;
+  }
+
